--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -59,8 +62,10 @@
                         </div>
                         <div class="col-md-5 mb-5">
                             <div>
-                                <h1 class="display-3">Nike React</h1>
-                                <h1>Infinity Run 2</h1>
+                                <h1 style="
+                                color: #FA804C;" class="display-3 ">Nike React</h1>
+                                <h1 class="display-3 text-nowrap">Infinity Run 2</h1>
+                               
                                 <p>Lorem Ipsum is simply dummy text of the printing
                                     and typesetting industry.</p>
 
